# Workflow_SI

./: .gitignore  README.md  pyproject.toml  readme.md  tutorial.ipynb
source/: __init__.py  non_parametric.py  npgc.py  plotting.py
tests/: test_non_parametric_tabular.py
