[project]
name = "workflow-si"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Diaz",email = "gdiaz95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "jupyterlab (>=4.5.3,<5.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
package-mode = false

[virtualenvs]
in-project = true



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
